--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hi_picture
+    url: jdbc:mysql://localhost:3306/hl_picture
     username: root
     password: 123456
 mybatis-plus:
@@ -29,8 +29,7 @@ knife4j:
     title: 接口文档
     version: 1.0
     group:
-      test1:
-        group-name: 默认分组
+      default:
         api-rule: package
         api-rule-resources:
           - com.hl.hlpicturebackend.controller
