--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,11 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.hl.hlpicturebackend.controller
+# 对象存储配置
+cos:
+  client:
+    host:
+    secretId:
+    secretKey:
+    region:
+    bucket:
