--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,17 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.15</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- Caffeine本地缓存-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version>
+        </dependency>
         <!-- mybaits plus 分页插件-->
         <dependency>
             <groupId>com.baomidou</groupId>
