feat:ddd-finish

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ mybatis-plus:
             type: CLASS_BASED
             props:
               strategy: standard
-              algorithmClassName: com.hl.hlpicturebackend.manager.sharding.PictureShardingAlgorithm
+              algorithmClassName: com.hl.hlpicture.share.sharding.PictureShardingAlgorithm
     props:
       sql-show: true
 
